--- a/src/components/Routes/EachProject/Plans/Plans.sass
+++ b/src/components/Routes/EachProject/Plans/Plans.sass
@@ -71,6 +71,7 @@
           color: #fff
           margin-top: 20px
           padding: 30px
+          cursor: pointer
 @media (max-width: 992px)
   .plans
     .react-tabs
