--- a/src/components/Routes/Home/Info/info.sass
+++ b/src/components/Routes/Home/Info/info.sass
@@ -5,12 +5,18 @@
 
   h4
     margin-bottom: 50px
+    &.infoAr
+      font-family: 'JFRegular', sans-serif
+
+
   p
 
     width: 100% !important
     font-size: 0.9em
     //padding: 0 30vw
     line-height: 3vh
+    &.infoAr
+      font-family: 'JFLight', sans-serif
     a
       font-weight: 400
       color: #CDA036
@@ -42,3 +48,5 @@
     h5
       font-size: 0.9em
       font-weight: 600
+      &.infoAr
+        font-family: 'JFRegular', sans-serif
