--- a/src/components/Reusable/Navbar/Navbar.sass
+++ b/src/components/Reusable/Navbar/Navbar.sass
@@ -11,6 +11,11 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
 //   opacity: 0
 .bm-burger-button
   display: none
+  opacity: 0
+
+  button
+    display: none
+
 .bm-menu
   display: none
 .dropdown-content
@@ -52,12 +57,12 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
           background-color: $main-cayan-gold
           a
             font-weight: 400
-            // letter-spacing: 0.5em
+            letter-spacing: 0.5em
             font-size: 1.1em
         a
           color: #fff
           font-size: 1em
-          // letter-spacing: 0.2em
+          letter-spacing: 0.2em
           font-weight: 200
     .nav-links
       margin: auto
@@ -66,14 +71,21 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
       text-align: center
       display: flex
       justify-content: space-between
-      .link-wrapper
-        a
+      &.navbarAr
+        display: flex
+        flex-direction: row-reverse
+        li
+          a
+            letter-spacing: 0
+            font-family: 'JFLight', sans-serif
+            &.selected
+              font-family: 'JFRegular', sans-serif
 
       li
         margin: 2px
         a
           color: #222222
-          // letter-spacing: 0.2em
+          letter-spacing: 0.2em
           font-size: 0.9em
           font-weight: 300
           max-height: 50px
@@ -134,6 +146,7 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
     right: 20px
     top: 20px
     display: block
+    opacity: 1
 
   /* Color/shape of burger icon bars */
   .bm-burger-bars
@@ -182,7 +195,7 @@ $shadow: 5px 5px 100px 0 rgba(0,0,0,0.2)
       a
         font-family: 'Montserrat', sans-serif !important
         font-weight: 100
-        // letter-spacing: 0.1em
+        letter-spacing: 0.1em
         font-size: 0.9em
 
         &.selected
