--- a/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.css
+++ b/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.css
@@ -1,8 +1,30 @@
+@charset "UTF-8";
 @import url(~slick-carousel/slick/slick.css);
 @import url(~slick-carousel/slick/slick-theme.css);
+.arabic-description {
+  direction: rtl;
+  float: right;
+  margin-top: 0; }
+
 .projetcsCarousel {
   height: 700px;
   background-color: #fff; }
+  .projetcsCarousel h1.carouselTitleAr {
+    letter-spacing: 0;
+    text-align: right;
+    direction: rtl;
+    font-family: "JFRegular", sans-serif; }
+    .projetcsCarousel h1.carouselTitleAr::after {
+      margin-right: 10px; }
+    .projetcsCarousel h1.carouselTitleAr::before {
+      display: none; }
+  .projetcsCarousel .arabic {
+    text-align: right;
+    direction: rtl;
+    letter-spacing: 0; }
+    .projetcsCarousel .arabic::before {
+      content: "المشاريع";
+      right: 20px; }
   .projetcsCarousel .containermy {
     width: 80%;
     margin: 0 !important;
@@ -120,23 +142,40 @@
                 padding: 10px;
                 border-bottom: 1px solid rgba(0, 0, 0, 0.2);
                 box-shadow: 0px #fff;
-                height: 100px; }
+                height: 110px; }
                 .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description h6 {
                   font-size: 1em;
                   color: #222222;
                   display: inline; }
+                  .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description h6.arabicTitle {
+                    text-align: right;
+                    direction: rtl;
+                    margin: 0;
+                    font-family: "JFRegular", sans-serif; }
                 .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description h5 {
                   font-size: 1.3em;
                   color: #CDA036;
                   font-family: "Oswald", sans-serif;
                   display: inline;
                   position: absolute;
-                  right: 10px;
-                  margin: 0; }
+                  margin: 0;
+                  right: 10px; }
+                  .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description h5.priceClass {
+                    left: 10px; }
                 .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description p {
                   font-size: 0.8em;
                   line-height: 1.2em;
-                  margin-top: 10px; }
+                  margin-top: 10px;
+                  display: none; }
+                  .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description p.descriptionEn {
+                    display: block; }
+                  .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .description p.descriptionAr {
+                    margin-top: 30px;
+                    display: block;
+                    text-align: right;
+                    direction: rtl;
+                    line-height: 1.4em;
+                    font-family: "JFLight", sans-serif; }
               .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info {
                 width: 100%;
                 border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -146,6 +185,8 @@
                   height: 100%;
                   padding-left: 5px;
                   border-right: 1px solid rgba(0, 0, 0, 0.2); }
+                  .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info .project-info-icons.iconsAr {
+                    text-align: right; }
                   .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info .project-info-icons.right {
                     border-right: none;
                     padding-left: 5px; }
@@ -156,7 +197,15 @@
                     display: inline;
                     font-size: 0.7em;
                     margin-left: 5px;
-                    font-weight: 500; }
+                    font-weight: 500;
+                    display: none; }
+                    .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info .project-info-icons p.nutural {
+                      display: inline; }
+                    .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info .project-info-icons p.classEn {
+                      display: inline; }
+                    .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .project-info .project-info-icons p.classAr {
+                      display: inline;
+                      font-family: "JFRegular", sans-serif; }
               .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .more-details {
                 position: relative;
                 left: 50%;
@@ -172,6 +221,8 @@
                 width: 120px;
                 border-radius: 30px;
                 margin-top: 10px; }
+                .projetcsCarousel .containermy .row .carousel .slick-slider .slick-list .wrapper .more-details.carouselTitleAr {
+                  font-family: "JFRegular", sans-serif; }
 
 @media (max-width: 992px) {
   .projetcsCarousel {
@@ -188,7 +239,7 @@
           .projetcsCarousel .containermy .carousel .slick-slider .wrapper {
             width: 100% !important;
             margin: 0px !important; } }
-@media (min-width: 993px) and (max-width: 1300px) {
+@media (min-width: 993px) and (max-width: 1500px) {
   .projetcsCarousel .containermy {
     width: 100% !important; }
     .projetcsCarousel .containermy .right-btn, .projetcsCarousel .containermy .left-btn {
