--- a/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.sass
+++ b/src/components/Reusable/ProjectsCarousel/ProjectsCarousel.sass
@@ -1,8 +1,34 @@
 @import "~slick-carousel/slick/slick.css"
 @import "~slick-carousel/slick/slick-theme.css"
+
+
+.arabic-description
+  direction: rtl
+  float: right
+  margin-top: 0
+
 .projetcsCarousel
   height: 700px
   background-color: #fff
+  h1
+    &.carouselTitleAr
+      letter-spacing: 0
+      text-align: right
+      direction: rtl
+      font-family: 'JFRegular', sans-serif
+      &::after
+        margin-right: 10px
+      &::before
+        display: none
+
+  .arabic
+    text-align: right
+    direction: rtl
+    letter-spacing: 0
+
+    &::before
+      content: "المشاريع"
+      right: 20px
   .containermy
     width: 80%
     margin: 0 !important
@@ -28,6 +54,7 @@
             margin: auto
             font-weight: 400
             color: #fff
+
           &.right-btn
             right: 10px
             &::before
@@ -135,26 +162,41 @@
                 padding: 10px
                 border-bottom: 1px solid rgba(0,0,0,0.2)
                 box-shadow: 0px #fff
-                height: 100px
+                height: 110px
 
                 h6
                   font-size: 1em
                   color: #222222
                   display: inline
+                  &.arabicTitle
+                    text-align: right
+                    direction: rtl
+                    margin: 0
+                    font-family: 'JFRegular', sans-serif
                 h5
                   font-size: 1.3em
                   color: #CDA036
                   font-family: 'Oswald', sans-serif
                   display: inline
                   position: absolute
-                  right: 10px
                   margin: 0
+                  right: 10px
+                  &.priceClass
+                    left: 10px
                 p
                   font-size: 0.8em
                   line-height: 1.2em
                   margin-top: 10px
-
-
+                  display: none
+                  &.descriptionEn
+                    display: block
+                  &.descriptionAr
+                    margin-top: 30px
+                    display: block
+                    text-align: right
+                    direction: rtl
+                    line-height: 1.4em
+                    font-family: 'JFLight', sans-serif
               .project-info
                 width: 100%
                 border-bottom: 1px solid rgba(0,0,0,0.2)
@@ -164,7 +206,8 @@
                   height: 100%
                   padding-left: 5px
                   border-right: 1px solid rgba(0,0,0,0.2)
-                  // border-bottom: 1px solid rgba(0,0,0,0.2)
+                  &.iconsAr
+                    text-align: right
                   &.right
                     border-right: none
                     padding-left: 5px
@@ -177,6 +220,14 @@
                     font-size: 0.7em
                     margin-left: 5px
                     font-weight: 500
+                    display: none
+                    &.nutural
+                      display: inline
+                    &.classEn
+                      display: inline
+                    &.classAr
+                      display: inline
+                      font-family: 'JFRegular', sans-serif
               .more-details
                 position: relative
                 left: 50%
@@ -192,6 +243,8 @@
                 width: 120px
                 border-radius: 30px
                 margin-top: 10px
+                &.carouselTitleAr
+                  font-family: 'JFRegular', sans-serif
 @media (max-width: 992px)
   .projetcsCarousel
     width: 100%
@@ -207,7 +260,7 @@
           .wrapper
             width: 100% !important
             margin: 0px !important
-@media (min-width: 993px) and (max-width: 1300px)
+@media (min-width: 993px) and (max-width: 1500px)
   .projetcsCarousel
     .containermy
       width: 100% !important
