--- a/src/components/Routes/EachProject/EachProject.sass
+++ b/src/components/Routes/EachProject/EachProject.sass
@@ -14,6 +14,10 @@
     font-size: 2em
     letter-spacing: 0.5em
     font-weight: 400
+    &.titleAr
+      letter-spacing: 0 !important
+      &::after
+        display: none
   hr
     border: 2px solid #CDA036
     width: 30%
