--- a/src/components/Routes/EachProject/overview/overview.sass
+++ b/src/components/Routes/EachProject/overview/overview.sass
@@ -1,8 +1,15 @@
 .overview
   background-color: #222222
   text-align: center
+  .text
+    h2
+
   .description
     padding: 50px 0
     p
       color: #fff
-      //margin-top: 20px
+      display: none
+      &.infoTextEn
+        display: block
+      &.infoTextAr
+        display: block
