--- a/src/components/Routes/Home/Header/Header.css
+++ b/src/components/Routes/Home/Header/Header.css
@@ -87,10 +87,21 @@
       text-align: center;
       padding: auto;
       margin-bottom: 20px; }
+      .home-page-header .home-page-nav .hide-on-med-and-down.headerNav {
+        flex-direction: row-reverse !important; }
+        .home-page-header .home-page-nav .hide-on-med-and-down.headerNav li.active {
+          font-family: "JFLight", sans-serif; }
+        .home-page-header .home-page-nav .hide-on-med-and-down.headerNav li a {
+          font-family: "JFLight", sans-serif; }
+          .home-page-header .home-page-nav .hide-on-med-and-down.headerNav li a.selected {
+            font-family: "JFRegular", sans-serif; }
+        .home-page-header .home-page-nav .hide-on-med-and-down.headerNav li a {
+          letter-spacing: 0; }
       .home-page-header .home-page-nav .hide-on-med-and-down li {
         margin: 0 2px;
         background: none; }
         .home-page-header .home-page-nav .hide-on-med-and-down li a {
+          letter-spacing: 0.2em;
           font-size: 0.9em;
           font-weight: 100;
           max-height: 50px;
@@ -130,12 +141,21 @@
       display: none; }
     .home-page-header .hero-text h3 {
       font-weight: 100; }
+      .home-page-header .hero-text h3.titleAr {
+        font-family: "DroidKufiRegular", sans-serif; }
     .home-page-header .hero-text h1 {
       font-weight: 800;
       font-size: 8em;
       text-shadow: 9px 8px 20px rgba(0, 0, 0, 0.38);
       margin: 0;
       padding: 0; }
+      .home-page-header .hero-text h1 span {
+        font-weight: 800; }
+      .home-page-header .hero-text h1.titleAr {
+        font-family: "DroidKufiBold", sans-serif; }
+        .home-page-header .hero-text h1.titleAr span {
+          font-family: "DroidKufiBold", sans-serif;
+          color: #D2A63E; }
 
 @media (max-width: 992px) {
   .home-page-header .home-page-nav {
@@ -166,10 +186,13 @@
         .home-page-header .home-page-nav .side-nav li.active {
           background-color: #CDA036; }
           .home-page-header .home-page-nav .side-nav li.active a {
-            font-weight: 400; }
+            font-weight: 400;
+            letter-spacing: 0.5em;
+              letter-spacing-font-size: 1.1em; }
         .home-page-header .home-page-nav .side-nav li a {
           color: #fff;
           font-size: 1em;
+          letter-spacing: 0.2em;
           font-weight: 200; }
   .home-page-header .button-collapse {
     margin-top: -8px; }
