--- a/src/components/Routes/Home/Whyus/whyus.sass
+++ b/src/components/Routes/Home/Whyus/whyus.sass
@@ -27,7 +27,16 @@
     &::after
       top: 75%
 
-
+  .whyusTitle
+    text-align: right
+    right: 0
+    letter-spacing: 0
+    direction: rtl
+    font-family: 'JFRegular', sans-serif
+    &::before
+      display: none
+    &::after
+      margin-right: 10px
   .why-choose-us-info
     margin-top: 40px
     color: #fff
@@ -36,9 +45,19 @@
       .bg
         font-size: 50px
         color: #CDA036
-      p
-        color: #5D5D5D
-        line-height: 1.1em
+      .why-choose-us-text
+        p
+          color: #5D5D5D
+          line-height: 1.1em
+        &.whyusAr
+          text-align: right
+          direction: rtl
+          h6
+            font-family: 'JFRegular', sans-serif
+          p
+            font-family: 'JFLight', sans-serif
+
+
 @media (max-width: 992px)
   h1
     font-size: 2em !important
