--- a/src/components/Routes/Projects/Header/Header.css
+++ b/src/components/Routes/Projects/Header/Header.css
@@ -1,19 +1,3 @@
-.cayan {
-  position: fixed;
-  left: -30%;
-  margin: 0;
-  top: -5%;
-  bottom: 0;
-  padding: 0;
-  z-index: -30;
-  font-size: 13em;
-  color: rgba(0, 0, 0, 0.09);
-  transform: rotate(90deg);
-  display: none; }
-  @media (max-width: 1200px) {
-    .cayan {
-      display: none; } }
-
 .projects-hero-carousel-mobile {
   display: none; }
 
@@ -37,18 +21,34 @@
     transform: translateX(-50%);
     height: 210px;
     text-align: center; }
+    .projects-hero-carousel .container.titleAr {
+      bottom: 40px; }
+      .projects-hero-carousel .container.titleAr h1 {
+        font-family: "JFRegular", sans-serif; }
     .projects-hero-carousel .container h1 {
       padding: 0;
       margin: 50px 0 0 0;
       color: #fff;
-      font-size: 12em; }
+      font-size: 12em;
+      font-weight: 800; }
 
-@media (max-width: 992px) {
+@media (max-width: 550px) {
   .projects-hero-carousel {
     width: 100%; }
     .projects-hero-carousel .container {
+      bottom: 50px;
       height: 100px; }
       .projects-hero-carousel .container h1 {
-        font-size: 4.5em; } }
+        font-size: 5.5em !important; } }
+@media (min-width: 551px) and (max-width: 992px) {
+  .projects-hero-carousel {
+    width: 100%; }
+    .projects-hero-carousel .container {
+      bottom: 50px;
+      height: 100px; }
+      .projects-hero-carousel .container.titleAr {
+        bottom: 80px; }
+      .projects-hero-carousel .container h1 {
+        font-size: 8.5em !important; } }
 
 /*# sourceMappingURL=Header.css.map */
