--- a/src/components/Routes/Services/Sections/Sections.sass
+++ b/src/components/Routes/Services/Sections/Sections.sass
@@ -1,24 +1,4 @@
-.company-intro
-  margin-top: 10vh
-  text-align: center
-  h4
-    margin-bottom: 50px
-  p
-    margin: auto
-    width: 50%
-    max-width: 80%
-    font-size: 0.9em
-    //padding: 0 30vw
-    line-height: 3vh
-  .company-info-icons
-    margin-top: 60px
-    transition: all .3s
-    img
-      width: 10vh
-      height: auto
-    h5
-      font-size: 0.9em
-      font-weight: 600
+
 .services-section
   position: relative
   width: 100%
@@ -37,6 +17,9 @@
       letter-spacing: 0.7em
       font-weight: 400
       margin-top: 0
+      &.servicesTitleAr
+        letter-spacing: 0 !important
+        font-family: 'JFRegular', sans-serif
     hr
       height: 3px
       width: 10%
@@ -65,6 +48,7 @@
         padding: 10vh
         position: relative
         overflow: hidden
+
         &::after
           content: "INVESTMENT"
           position: absolute
@@ -78,12 +62,20 @@
           left: 0
         h5
           letter-spacing: 0.2em
+          &.text-direction
+            letter-spacing: 0 !important
+            font-family: 'JFRegular', sans-serif
         p
           margin-top: 20px
           color: #fff
           opacity: 0.6
           line-height: 1.7em
           font-weight: 100
+          &.text-direction
+            direction: rtl
+            text-align: right !important
+            letter-spacing: 0 !important
+            font-family: 'JFLight', sans-serif
       .services-img
         height: 100%
         //width: 600px
@@ -143,10 +135,11 @@
 
 @media (max-width:992px)
   .services-section
-    height: 180vh
+    height: 130vh
     .services-section-bg
       width: 75vw
-      top: -15%
+      top: -45%
+      height: 150%
       h1
         letter-spacing: 0.2em !important
         font-size: 1.4em
@@ -154,6 +147,7 @@
         width: 30%
     .services-section-front
       width: 90vw !important
+      top: -35%
       .services-section-each
         width: 100% !important
         margin-bottom: 30px !important
